syntax = "proto3";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

enum ExampleCompatEnumModel {
    ENUM10 = 0;
    ENUM11 = 1;
    ENUM12 = 2;
}

message ExampleCompatNestedModel {
    string string_key = 1;
    int32 int32_key = 2;
    ExampleCompatEnumModel enum_key = 3;
}

// ExampleCompat DB model definition which contains most of the common field types (simple and scalar)
message ExampleCompatDBModel {
    // Simple types
    int32 int32_key = 1;
    string string_key = 2;
    bool bool_key = 3;
    bytes bytes_key = 4;
    double double_key = 14;
    float float_key = 15;
    int64 int64_key = 16;

    // Container types with simple values
    map<string, string> map_string_string = 5;
    map<string, int32> map_string_int32 = 6;
    repeated string string_array_key = 7;
    repeated int32 int32_array_key = 8;

    // Container types with complex values
    repeated ExampleCompatNestedModel complex_array_key = 9;

    // Enum types
    ExampleCompatEnumModel enum_key = 10;

    // Complex types from protobuf stdlib
    google.protobuf.Timestamp timestamp_key = 11;
    google.protobuf.Struct struct_key = 12;

    // Other special types
    google.protobuf.NullValue null_key = 13;
}
